--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>列表操作-审核</title>
+    <!-- 在GitHub上读取不到http://res.layui.com/layui/dist/css/layui.css的样式，
+        因为用的是layui服务器上的资源，肯定不行，有做防外链处理 -->
     <link href="http://res.layui.com/layui/dist/css/layui.css"  rel="stylesheet" type="text/css"/>
+    <link href="layui.css"  rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/layer/3.1.0/layer.js"></script>
     <style>
